--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,7 +13,7 @@
   "vars": {
     "NEXT_PUBLIC_AWWWARD_LIVE_URL": "https://awwward.javanslem.dev",
     "NEXT_PUBLIC_AWWWARD_SOURCE_URL": "https://github.com/ansman58/awwward-site",
-    "NEXT_PUBLIC_BEAUTY_SALON_LIVE_URL": "https://beauty-salon.javanslem.dev",
+    "NEXT_PUBLIC_BEAUTY_SALON_LIVE_URL": "https://beauty.javanslem.dev",
     "NEXT_PUBLIC_BEAUTY_SALON_SOURCE_URL": "https://github.com/ansman58/beauty-salon",
     "NEXT_PUBLIC_CAR_RENTAL_LIVE_URL": "https://car-rental.javanslem.dev",
     "NEXT_PUBLIC_CAR_RENTAL_SOURCE_URL": "https://github.com/ansman58/car-rental",
@@ -21,7 +21,7 @@
     "NEXT_PUBLIC_CONSULTING_SOURCE_URL": "https://github.com/ansman58/consulting-firm",
     "NEXT_PUBLIC_DENTAL_CLINIC_LIVE_URL": "https://dental.javanslem.dev",
     "NEXT_PUBLIC_DENTAL_CLINIC_SOURCE_URL": "https://github.com/ansman58/dental-clinic",
-    "NEXT_PUBLIC_ECOMMERCE_LIVE_URL": "https://e-commerce.javanslem.dev",
+    "NEXT_PUBLIC_ECOMMERCE_LIVE_URL": "https://ecommerce.javanslem.dev",
     "NEXT_PUBLIC_ECOMMERCE_SOURCE_URL": "https://github.com/ansman58/ecommerce-site",
     "NEXT_PUBLIC_RESTAURANT_LIVE_URL": "https://restaurant.javanslem.dev",
     "NEXT_PUBLIC_RESTAURANT_SOURCE_URL": "https://github.com/ansman58/restaurant"
