--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -15,7 +15,7 @@
     "NEXT_PUBLIC_AWWWARD_SOURCE_URL": "https://github.com/ansman58/awwward-site",
     "NEXT_PUBLIC_BEAUTY_SALON_LIVE_URL": "https://beauty.javanslem.dev",
     "NEXT_PUBLIC_BEAUTY_SALON_SOURCE_URL": "https://github.com/ansman58/beauty-salon",
-    "NEXT_PUBLIC_CAR_RENTAL_LIVE_URL": "https://car-rental.javanslem.dev",
+    "NEXT_PUBLIC_CAR_RENTAL_LIVE_URL": "https://carental.javanslem.dev",
     "NEXT_PUBLIC_CAR_RENTAL_SOURCE_URL": "https://github.com/ansman58/car-rental",
     "NEXT_PUBLIC_CONSULTING_LIVE_URL": "https://consulting.javanslem.dev",
     "NEXT_PUBLIC_CONSULTING_SOURCE_URL": "https://github.com/ansman58/consulting-firm",
