--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,21 @@
     "directory": ".open-next/assets",
     "binding": "ASSETS"
   },
+    "observability": {
+    "enabled": false,
+    "head_sampling_rate": 1,
+    "logs": {
+      "enabled": true,
+      "head_sampling_rate": 1,
+      "persist": true,
+      "invocation_logs": true
+    },
+    "traces": {
+      "enabled": true,
+      "persist": true,
+      "head_sampling_rate": 1
+    }
+  },
   "vars": {
     "NEXT_PUBLIC_AWWWARD_LIVE_URL": "https://awwward.javanslem.dev",
     "NEXT_PUBLIC_AWWWARD_SOURCE_URL": "https://github.com/ansman58/awwward-site",
